# kennelbox

./: .gitignore  LICENSE  PRIORITIES.md  README.md  install.sh  kennelbox-recommendations.md  kennelbox.py  pyproject.toml
.github/workflows/: publish.yml
agent_bridge/: http_server.py  server.py
config/: allowlist.toml  sandbox.toml
docs/: connecting-agents.md
sandbox/: jail.py  venv_mgr.py
