[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kennelbox"
version = "0.1.0"
description = "Sandboxed AI agent workspace with MCP bridge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai", "agent", "sandbox", "mcp", "firejail"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/datacarismo/kennelbox"
Repository = "https://github.com/datacarismo/kennelbox"
Issues = "https://github.com/datacarismo/kennelbox/issues"
Changelog = "https://github.com/datacarismo/kennelbox/releases"

[project.scripts]
kennelbox = "kennelbox:app"

[tool.setuptools]
py-modules = ["kennelbox"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sandbox*", "agent_bridge*", "config*"]

[tool.setuptools.package-data]
config = ["*.toml"]
